[gd_scene load_steps=2 format=3 uid="uid://bfwagxpr5wr00"]

[ext_resource type="Script" path="res://control.gd" id="1_72cn4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72cn4")

[node name="Message" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 348.0
offset_top = 534.0
offset_right = 848.0
offset_bottom = 574.0
size_flags_stretch_ratio = 0.0

[node name="Container" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 350.0
offset_top = 105.0
offset_right = 850.0
offset_bottom = 500.0
metadata/_edit_group_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.082
anchor_bottom = 0.102
offset_left = 399.0
offset_top = 11.0
offset_right = 704.536
offset_bottom = 10.904
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Join" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Join Room"

[node name="Host" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Host Room"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 993.0
offset_top = 44.0
offset_right = 1094.0
offset_bottom = 112.0
size_flags_stretch_ratio = 0.0
placeholder_text = "Your name"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://node.tscn")
spawn_path = NodePath("../Node")
spawn_limit = 5

[node name="Node" type="Node" parent="."]

[connection signal="text_submitted" from="Message" to="." method="_on_label_2_text_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="text_submitted" from="Name" to="." method="_on_name_text_submitted"]
